# MediCosts

./: .env.example  .gitignore  README.md  clearnetwork.md  devlog.md  healthcare-price-transparency.html  package-lock.json  package.json  plan.md
clearnetwork/: alembic.ini  pyproject.toml
clearnetwork/alembic/: env.py
clearnetwork/alembic/versions/: 001_initial_schema.py  002_enable_postgis.py  003_add_zip_centroids.py  004_add_crawl_tracking.py  005_add_snapshots_and_alerts.py  006_widen_crawl_status.py  007_add_mrf_research.py  008_add_transparency_scoring.py
clearnetwork/app/: config.py  db.py  dependencies.py  main.py
clearnetwork/app/models/: __init__.py  base.py  insurer.py  network.py  (+1 more)
clearnetwork/crawler/: browser.py  change_detector.py  discovery.py  downloader.py  known_insurers.json  mrf_index.py  mrf_parser.py  orchestrator.py  scout.py  state_runner.py
clearnetwork/dashboard/: index.html
clearnetwork/scripts/: generate-blog-post.py  geocode_providers.py  load_nppes.py  load_zip_centroids.py  nightly-crawl.sh  nightly-report.py  seed-from-cms-qhp.py  seed-from-xlsx.py
clearnetwork/state-registry/: AK.json  AL.json  AR.json  AZ.json  CA.json  CO.json  CT.json  DC.json  DE.json  FL.json  GA.json  HI.json  IA.json  ID.json  IL.json  IN.json  KS.json  KY.json  LA.json  MA.json  MD.json  ME.json  MI.json  MN.json  MO.json  MS.json  MT.json  NC.json  ND.json  NE.json  NH.json  NJ.json  NM.json  NV.json  NY.json  OH.json  OK.json  OR.json  PA.json  RI.json  (+11 more)
clearnetwork/widget/: adequacy-report.html  demo.html  index.js  plan-finder.html
(+306 files in other folders)
